AWS_CloudFormation/VPC_CloudFront.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  LatestAmiId:
    Description: (DO NOT CHANGE)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
    AllowedValues:
      - /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64 
  CloudFrontCertificateArn:
    Description: ACM certificate ARN in us-east-1 for CloudFront viewer (ex. arn:aws:acm:us-east-1) 
    Type: String

Resources:
  SAVPC:     #가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: SA-VPC
          
  SA1IGW:     #VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: SA-1IGW
          
  SAIGWAttachment:     #IGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SA1IGW
      VpcId: !Ref SAVPC
  
  SAPublicSN:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SAVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: SA-Public-SN
          
  SAPublicSN2:     #Public 서브넷 2생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SAVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: SA-Public-SN2

  SAPublicRT:     #퍼블릭용 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SAVPC
      Tags:
        - Key: Name
          Value: SA-Public-RT
          
  DefaultPublicRoute:     #퍼블릭 RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: SAIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref SAPublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SA1IGW
  
  SAPublicSNRouteTableAssociation:     #Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SAPublicRT
      SubnetId: !Ref SAPublicSN
      
  SAPublicSNRouteTableAssociation2:     #Public 서브넷을 Public 2라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SAPublicRT
      SubnetId: !Ref SAPublicSN2
      
  SASG:     #보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref SAVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
                   
  myLaunchTemplate1:     # 시작 템플릿 생성하기 
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template-for-auto-scaling-1'
      VersionDescription: !Sub 'Initial version for ${AWS::StackName} Launch Template'
      LaunchTemplateData:
        NetworkInterfaces:
          - DeviceIndex: 0
            #AssociatePublicIpAddress: true
            Groups:
              - !Ref SASG
            DeleteOnTermination: true
            AssociatePublicIpAddress: "true"
        ImageId: !Ref LatestAmiId
        InstanceType: t3.micro
        KeyName: !Ref KeyName
        UserData:
          Fn::Base64:
            !Sub |
              #!/bin/bash
              TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
                -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
              RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)
              IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)
              LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)              
              wget https://cloudneta.github.io/test.jpg
              wget -P /usr/share/nginx/html/ https://cloudneta.github.io/test.jpg
              dnf install -y nginx
              echo "<head><link rel='icon' href='data:;base64,iVBORw0KGgo='></head><h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1><img src='test.jpg'>" > /usr/share/nginx/html/index.html
              systemctl start nginx
              systemctl enable nginx

  ASG1:     #Auto Scaling Group 생성 
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: webserverASG
      VPCZoneIdentifier:
        - !Ref SAPublicSN
        - !Ref SAPublicSN2
      Cooldown: 10
      HealthCheckGracePeriod: 120
      HealthCheckType: ELB     #헬스체크는 로드 밸런서가 더 좋아서 이렇게 설정함
      LaunchTemplate:
        LaunchTemplateId: !Ref myLaunchTemplate1
        Version: !GetAtt myLaunchTemplate1.LatestVersionNumber
      MaxSize: 4
      MinSize: 1
      DesiredCapacity: 2
      TargetGroupARNs:
        -  !Ref ALBTG     #타겟 그룹 연결
      Tags:
        - Key: Name
          Value: web-asg
          PropagateAtLaunch: true
    
    # UpdatePolicy:     #CloudFormation 업데이트 시 Rolling Update 수행. 시작 템플릿 실행시 기존 인스턴스 삭제후 재 실행 
      # AutoScalingRollingUpdate:
        # MinInstancesInService: 1
        # MaxBatchSize: 1
        # PauseTime: PT2M
  # ALB 생성
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Name: AWS-ALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref SASG
      Subnets:
        - !Ref SAPublicSN
        - !Ref SAPublicSN2
        
  # ALB 대상 그룹
  ALBTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: ALB-TG
      Port: 80
      Protocol: HTTP
      HealthCheckIntervalSeconds: 10
      VpcId: !Ref SAVPC
      # Targets:    # 오토 스케일링 그룹에서 자동 등록해줄거니깐 target 부분은 주석 처리 
        # - Id: !Ref testPrivateEc21
          # Port: 80
        # - Id: !Ref testPrivateEc22
          # Port: 80
          
  # ALB 리스너 생성
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTG
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP  
                    
  PublicDNS:
    Type: AWS::Route53::HostedZone
    Properties:
      Name: siseon.live
      HostedZoneConfig:
        Comment: Public hosted zone For siseon.live
        
  ALBAlias:     # 로드밸런서엔드포인트를 원하는 서브도메인 생성해서 연결하는것  
    Type: AWS::Route53::RecordSet
    Properties:
      Name: alb.siseon.live
      Type: A
      HostedZoneId: !Ref PublicDNS
      AliasTarget:
        DNSName: !GetAtt ALB.DNSName     #로드밸런서의 DNS이름 연결 
        HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID
        
  CFDistribution:     #CloudFront 배포 리소스
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        Enabled: true
        PriceClass: PriceClass_All
        Aliases:
          - www.siseon.live
        DefaultRootObject: index.html
        Origins:
          - Id: alb-origin
            DomainName: !GetAtt ALB.DNSName
            CustomOriginConfig:
              OriginProtocolPolicy: http-only
              HTTPPort: 80
        DefaultCacheBehavior:
          TargetOriginId: alb-origin
          ViewerProtocolPolicy: redirect-to-https
          AllowedMethods: [GET, HEAD, OPTIONS, PUT, POST, PATCH, DELETE]
          CachedMethods: [GET, HEAD, OPTIONS]
          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6     # Managed-CachingOptimized
          Compress: true
        ViewerCertificate:
          AcmCertificateArn: !Ref CloudFrontCertificateArn   # (us-east-1)
          SslSupportMethod: sni-only
          MinimumProtocolVersion: TLSv1.2_2021
          
  CloudFrontAliasRecord:     # Route 53 DNS 레코드 생성 
    Type: AWS::Route53::RecordSet
    Properties:
      Name: www.siseon.live
      Type: A
      HostedZoneId: !Ref PublicDNS
      AliasTarget:     # CloudFront로 연결
        DNSName: !GetAtt CFDistribution.DomainName
        HostedZoneId: Z2FDTNDATAQYW2
        
    
# Outputs:     #각 EC2 Public&Private IP 추출
  # PublicEC2:
    # Description: Public EC2 Public IP
    # Value: !GetAtt SAEC2.PublicIp
  # PrivateEC2:
    # Description: Private EC2 Private IP
    # Value: !GetAtt TESTPrivateEC2.PrivateIp
