AWS_CloudFormation/VPC_DMS.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  LatestAmiId:
    Description: (DO NOT CHANGE)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
    AllowedValues:
      - /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64 

Resources:
##########################################################################AWS##########################################################################################################
  AWSVPC:     #가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.1.0.0/16
      Tags:
        - Key: Name
          Value: AWS-VPC
          
  AWSIGW:     #VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AWS-IGW
          
  AWSIGWAttachment:     #IGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref AWSIGW
      VpcId: !Ref AWSVPC
  
  AWSPublicSN1:     #Public 서브넷 생성1
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.1.1.0/24
      Tags:
        - Key: Name
          Value: AWS-Public-SN1
          
  AWSPublicSN2:     #Public 서브넷 생성2
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.1.2.0/24
      Tags:
        - Key: Name
          Value: AWS-Public-SN2

  AWSPrivateSN1:     #Private 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 세 번째 AZ 목록 반환 (가용 영역 C)
      CidrBlock: 10.1.3.0/24
      Tags:
        - Key: Name
          Value: AWS-Private-SN1
          
  AWSPrivateSN2:     #Private 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]     #현재 리전의 세 번째 AZ 목록 반환 (가용 영역 C)
      CidrBlock: 10.1.4.0/24
      Tags:
        - Key: Name
          Value: AWS-Private-SN2

  AWSPublicRT:     #퍼블릭용 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSVPC
      Tags:
        - Key: Name
          Value: AWS-Public-RT
          
  DefaultPublicRoute:     #퍼블릭 RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: AWSIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref AWSPublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AWSIGW
      
  AWSPrivateRT:     #프라이빗 서브넷용 라우팅 테이블
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSVPC
      Tags:
        - Key: Name
          Value: AWS-Private-RT
  
  AWSPublicSNRouteTableAssociation1:     #Public 서브넷을 Public 라우팅 테이블에 연결1
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPublicRT
      SubnetId: !Ref AWSPublicSN1
      
  AWSPublicSNRouteTableAssociation2:     #Public 서브넷을 Public 라우팅 테이블에 연결2
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPublicRT
      SubnetId: !Ref AWSPublicSN2
      
  AWSPrivateSNRouteTableAssociation1:     #Private 서브넷을 Private 라우팅 테이블에 연결1
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPrivateRT
      SubnetId: !Ref AWSPrivateSN1
      
  AWSPrivateSNRouteTableAssociation2:     #Private 서브넷을 Private 라우팅 테이블에 연결2
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPrivateRT
      SubnetId: !Ref AWSPrivateSN2
      
  AWSSecurityGroup:     #보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref AWSVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '4500'
          ToPort: '4500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '500'
          ToPort: '500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0  # Seoul VPC 대역에서 오는 MySQL 접속 허용
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  AWSPublicEC21:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: EC2-S3-FullAccess-Role
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: AWS-Public-EC21
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref AWSPublicSN1
          GroupSet:
            - !Ref AWSSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
  
            # MariaDB 설치
            dnf install -y mariadb105-server
  
            # 서비스 시작
            systemctl enable --now mariadb              
            dnf install -y httpd php php-mysqlnd            # 6. Apache 및 PHP 모듈 설치 (DB 서버지만 로컬 테스트용으로 깔아둡니다)
            systemctl enable --now httpd            
                        
            yum install -y https://rpms.remirepo.net/enterprise/remi-release-7.rpm
            yum install -y yum-utils
            sudo yum-config-manager --disable 'remi-php*'
            sudo yum-config-manager --enable remi-php74
            yum install -y php php-cli php-common php-fpm php-mysqlnd php-mbstring

            systemctl restart httpd
            hostnamectl --static set-hostname Seoul-AWS-WebSrv1     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성
            aws s3 cp s3://zxxnwood /var/www/html/ --recursive
            
  AWSPublicEC22:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: EC2-S3-FullAccess-Role
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: AWS-Public-EC22
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref AWSPublicSN2
          GroupSet:
            - !Ref AWSSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
  
            # MariaDB 설치
            dnf install -y mariadb105-server
  
            # 서비스 시작
            systemctl enable --now mariadb              
            dnf install -y httpd php php-mysqlnd            # 6. Apache 및 PHP 모듈 설치 (DB 서버지만 로컬 테스트용으로 깔아둡니다)
            systemctl enable --now httpd            
                        
            yum install -y https://rpms.remirepo.net/enterprise/remi-release-7.rpm
            yum install -y yum-utils
            sudo yum-config-manager --disable 'remi-php*'
            sudo yum-config-manager --enable remi-php74
            yum install -y php php-cli php-common php-fpm php-mysqlnd php-mbstring

            systemctl restart httpd
            hostnamectl --static set-hostname Seoul-AWS-WebSrv1     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성
            aws s3 cp s3://zxxnwood /var/www/html/ --recursive
            

##########################################################################AWS##########################################################################################################
         
  IDCVPC:     #IDC 가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.2.0.0/16
      Tags:
        - Key: Name
          Value: IDC-VPC   
          
  IDCIGW:     #IDC VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IDC-IGW
          
  IDCIGWAttachment:     #IDCIGW를 SeoulVPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IDCIGW
      VpcId: !Ref IDCVPC
  
  IDCSN1:     #IDC 서브넷1 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref IDCVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.2.1.0/24
      Tags:
        - Key: Name
          Value: IDC-Public-SN

  IDCRT:     #IDC 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref IDCVPC
      Tags:
        - Key: Name
          Value: IDC-RT
          
  IDCRoute:     #IDC RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: IDCIGWAttachment     #IDCIGWAttachment 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref IDCRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IDCIGW 
      
  IDCRTAssociation1:     #Public 서브넷1을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref IDCRT
      SubnetId: !Ref IDCSN1
      
  IDCVPCSG:     #보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: IDCVPCSG
      VpcId: !Ref IDCVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '4500'
          ToPort: '4500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '500'
          ToPort: '500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0  # Seoul VPC 대역에서 오는 MySQL 접속 허용
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          
  IDCDBSRV:     #IDCDBSRV 인스턴스 생성 
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: IDC-DBSRV
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref IDCSN1
          AssociatePublicIpAddress: true     #공인IP할당
          GroupSet:
            - !Ref IDCVPCSG
          PrivateIpAddress: 10.2.1.100     # 사설 IP 직접 할당 
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
  
            # MariaDB 설치
            dnf install -y mariadb105-server
  
            # 서비스 시작
            systemctl enable --now mariadb  
  
            # 방화벽 (필요 시)
            # firewall-cmd --permanent --add-service=mysql
            # firewall-cmd --reload

            # 문자셋 및 외부 접속 설정
            cat <<EOF > /etc/my.cnf.d/mariadb-server.cnf
            [mysqld]
            bind-address=0.0.0.0
            log-bin=mysql-bin
            collation-server=utf8mb4_general_ci
            character-set-server=utf8mb4
            server-id=1

            [client]
            default-character-set=utf8mb4

            [mysql]
            default-character-set=utf8mb4
            EOF

            systemctl restart mariadb

            # DB 생성
            mysql -u root -e "CREATE DATABASE IF NOT EXISTS sqlDB CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;"

            # 사용자 생성
            mysql -u root -e "CREATE USER IF NOT EXISTS 'user1'@'%' IDENTIFIED BY 'p@ssw0rd';"
            mysql -u root -e "GRANT ALL PRIVILEGES ON sqlDB.* TO 'user1'@'%';"
            mysql -u root -e "FLUSH PRIVILEGES;"

            # 테이블 생성
            mysql -u root sqlDB <<EOSQL
            CREATE TABLE IF NOT EXISTS userTBL (
              userID CHAR(8) NOT NULL PRIMARY KEY,
              name VARCHAR(10) NOT NULL,
              birthYear INT NOT NULL,
              addr CHAR(2) NOT NULL,
              mobile1 CHAR(3),
              mobile2 CHAR(8),
              height SMALLINT,
              mDATE DATE
            );
            EOSQL

            # 데이터 입력
            mysql -u root sqlDB <<EOSQL
            INSERT INTO userTBL VALUES ('LSG', '이승기', 1987, '서울', '011', '1111111', 182, '2008-08-08');
            INSERT INTO userTBL VALUES ('KBS', '김범수', 1979, '경남', '011', '2222222', 173, '2012-04-04');
            INSERT INTO userTBL VALUES ('KKH', '김경호', 1971, '전남', '019', '3333333', 177, '2007-07-07');
            INSERT INTO userTBL VALUES ('JYP', '조용필', 1950, '경기', '011', '4444444', 166, '2009-04-04');
            INSERT INTO userTBL VALUES ('SSK', '성시경', 1979, '서울', NULL, NULL, 186, '2013-12-12');
            INSERT INTO userTBL VALUES ('LJB', '임재범', 1963, '서울', '016', '6666666', 182, '2009-09-09');
            INSERT INTO userTBL VALUES ('YJS', '윤종신', 1969, '경남', NULL, NULL, 170, '2005-05-05');
            INSERT INTO userTBL VALUES ('EJW', '은지원', 1972, '경북', '011', '8888888', 174, '2014-03-03');
            INSERT INTO userTBL VALUES ('JKW', '조관우', 1965, '경기', '018', '9999999', 172, '2010-10-10');
            INSERT INTO userTBL VALUES ('BBK', '바비킴', 1973, '서울', '010', '0000000', 176, '2013-05-05');
            EOSQL
            
  VPCPeering:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref AWSVPC             # 요청자 VPC
      PeerVpcId: !Ref IDCVPC         # 피어 VPC
      PeerRegion: !Ref "AWS::Region" # 같은 리전이면 그대로
      Tags:
        - Key: Name
          Value: AWSVPC-IDCVPC-Peering

  # 요청자 VPC 라우팅 테이블에 피어 VPC 경로 추가
  AWSPrivateRTtoIDCVPC:
    Type: AWS::EC2::Route
    DependsOn: VPCPeering
    Properties:
      RouteTableId: !Ref AWSPrivateRT      # AWSVPC Private RT
      DestinationCidrBlock: 10.2.0.0/16    # 피어 VPC CIDR
      VpcPeeringConnectionId: !Ref VPCPeering

  # 피어 VPC 라우팅 테이블에 요청자 VPC 경로 추가
  IDCRTtoAWSVPC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref IDCRT            # IDCVPC RT
      DestinationCidrBlock: 10.1.0.0/16   # 요청자 VPC CIDR
      VpcPeeringConnectionId: !Ref VPCPeering
    
Outputs:     #각 EC2 Public&Private IP 추출
  PublicEC21:
    Description: PUBLIC IP of AWSPublicEC21
    Value: !GetAtt AWSPublicEC21.PublicIp
  PublicEC22:
    Description: PUBLIC IP OF AWSPublicEC22
    Value: !GetAtt AWSPublicEC22.PublicIp
  IDCDBSRV:
    Description: PUBLIC IP OF IDCDBSRV
    Value: !GetAtt IDCDBSRV.PublicIp
