AWS_CloudFormation/VPC_DNS.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  LatestAmiId:
    Description: (DO NOT CHANGE)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
    AllowedValues:
      - /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64 

Resources:
  AWSVPC:     # AWS 가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.70.0.0/16
      Tags:
        - Key: Name
          Value: AWS-VPC
          
  IDCVPC:     # IDC 가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true    # IDC 가정하면 이건 false 하셈
      EnableDnsHostnames: true     # IDC 가정하면 이건 false 하셈
      CidrBlock: 10.80.0.0/16
      Tags:
        - Key: Name
          Value: IDC-VPC
          
  AWSIGW:     # AWS VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AWS-IGW
          
  AWSIGWAttachment:     #AWSIGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref AWSIGW
      VpcId: !Ref AWSVPC
      
  IDCIGW:     # IDC VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IDC-IGW
          
  IDCIGWAttachment:     #IDCIGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IDCIGW
      VpcId: !Ref IDCVPC
  
  AWSVPCPublicSN1:     #AWS Public 1 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.70.1.0/24
      Tags:
        - Key: Name
          Value: AWS-Public-SN1
          
  AWSVPCPublicSN2:     #AWS Public 2 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.70.2.0/24
      Tags:
        - Key: Name
          Value: AWS-Public-SN2
          
  IDCVPCPublicSN:     #IDC Public 1 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref IDCVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.80.1.0/24
      Tags:
        - Key: Name
          Value: IDC-Public-SN1

  AWSPublicRT1:     #퍼블릭용 라우팅 테이블 생성 1
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSVPC
      Tags:
        - Key: Name
          Value: AWS-Public-RT1
          
  DefaultPublicRoute1:     #퍼블릭 RT에 기본 인터넷 경로 추가 1
    Type: AWS::EC2::Route
    DependsOn: AWSIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref AWSPublicRT1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AWSIGW  
      
  IDCPublicRT:     #IDC 퍼블릭용 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref IDCVPC
      Tags:
        - Key: Name
          Value: IDC-Public-RT
          
  DefaultIDCPublicRoute:     #IDC퍼블릭 RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: IDCIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref IDCPublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IDCIGW     

  
  AWSPublicSNRouteTableAssociation1:     #AWS Public 서브넷1을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPublicRT1
      SubnetId: !Ref AWSVPCPublicSN1
      
  AWSPublicSNRouteTableAssociation2:     #AWS Public 서브넷2을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AWSPublicRT1
      SubnetId: !Ref AWSVPCPublicSN2
      
  IDCPublicSNRouteTableAssociation:     #IDC Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref IDCPublicRT
      SubnetId: !Ref IDCVPCPublicSN

  # DNS용 고정 IP 생성 및 연결
  DNSENIEth0:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref IDCVPCPublicSN
      Description: DNS eth0
      GroupSet:
        - !Ref IDCSecurityGroup
      PrivateIpAddress: 10.80.1.200
      Tags:
        - Key: Name
          Value: DNS-ENI-Eth0
  
  DNSEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  DNSEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt DNSEIP.AllocationId
      NetworkInterfaceId: !Ref DNSENIEth0
      
  VPC2DNSOptions:
      Type: AWS::EC2::DHCPOptions
      Properties:
        DomainName: idcneta.internal
        DomainNameServers:
          - 10.80.1.200
          - 8.8.8.8
        NtpServers:
          - 203.248.240.140
          - 168.126.3.6
        Tags:
          - Key: Name
            Value: IDC-VPC2-DHCPOptions
         
  VPC2DNSOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      DhcpOptionsId: !Ref VPC2DNSOptions
      VpcId: !Ref IDCVPC   

  VPCPeering:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref AWSVPC
      PeerVpcId: !Ref IDCVPC
      Tags:
        - Key: Name
          Value: VPCPeering
      
  PeeringRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 10.80.0.0/16
      RouteTableId: !Ref AWSPublicRT1
      VpcPeeringConnectionId: !Ref VPCPeering
      
  PeeringRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 10.70.0.0/16
      RouteTableId: !Ref IDCPublicRT
      VpcPeeringConnectionId: !Ref VPCPeering
      
  PrivateDNS1:
    Type: AWS::Route53::HostedZone
    DependsOn: AWSVPC
    Properties:
      HostedZoneConfig:
        Comment: Private hosted zone for awsneta.net
      Name: awsneta.internal
      VPCs:
        - VPCId: !Ref AWSVPC
          VPCRegion: ap-northeast-2
      HostedZoneTags:
        - Key: Name
          Value: awsnetadomain
          
  DNSRecordInstance1:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref PrivateDNS1
      Comment: DNS name for AWS WEBSERV1 instance
      Name: websrv1.awsneta.internal
      Type: A
      TTL: 60
      ResourceRecords:
        - !GetAtt AWSSEBSRV1.PrivateIp
        
  DNSRecordInstance2:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref PrivateDNS1
      Comment: DNS name for AWS WEBSERV2 instance
      Name: websrv2.awsneta.internal
      Type: A
      TTL: 60
      ResourceRecords:
        - !GetAtt AWSSEBSRV2.PrivateIp
      
      
      
  AWSSecurityGroup:     #AWS 보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref AWSVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          
  IDCSecurityGroup:     #IDC 보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref IDCVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '53'
          ToPort: '53'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  AWSSEBSRV1:     #AWS Public EC2 인스턴스 1 생성
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: AWS-WEBSRV1
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref AWSVPCPublicSN1
          GroupSet:
            - !Ref AWSSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
          PrivateIpAddress: 10.70.1.100    # 사설 IP
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            (
            echo "qwe123"
            echo "qwe123"
            ) | passwd --stdin root
            sed -i "s/^PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config     #SSH 비밀번호 로그인 허용
            sed -i "s/^#PermitRootLogin prohibit-password/PermitRootLogin yes/g" /etc/ssh/sshd_config     #root 계정 SSH 로그인 허용
            service sshd restart     #SSH 서비스 재시작
            hostnamectl --static set-hostname Seoul-AWS-WebSrv1     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성

  AWSSEBSRV2:     #AWS Public EC2 인스턴스 2 생성
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: AWS-WEBSRV2
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref AWSVPCPublicSN2
          GroupSet:
            - !Ref AWSSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
          PrivateIpAddress: 10.70.2.100    # 사설 IP
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            (
            echo "qwe123"
            echo "qwe123"
            ) | passwd --stdin root
            sed -i "s/^PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config     #SSH 비밀번호 로그인 허용
            sed -i "s/^#PermitRootLogin prohibit-password/PermitRootLogin yes/g" /etc/ssh/sshd_config     #root 계정 SSH 로그인 허용
            service sshd restart     #SSH 서비스 재시작
            hostnamectl --static set-hostname Seoul-AWS-WebSrv2     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성

  IDCDNSSRV:     #IDCDNSSRV EC2 인스턴스 1 생성
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: IDC-DNSSRV
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          NetworkInterfaceId: !Ref DNSENIEth0
          # AssociatePublicIpAddress: true     #공인IP할당
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            dnf install -y bind bind-utils
            sed -i 's/listen-on port 53 { 127.0.0.1; };/listen-on port 53 { any; };/' /etc/named.conf
            sed -i 's/allow-query     { localhost; };/allow-query     { any; };/' /etc/named.conf
            sed -i 's/dnssec-enable yes/dnssec-enable no/g' /etc/named.conf
            sed -i 's/dnssec-validation yes/dnssec-validation no/g' /etc/named.conf
            cat << EOF >> /etc/named.rfc1912.zones
            zone "idcneta.internal" IN {
                type master;
                file "idcneta.internal.zone";
                allow-update { none; };
            };
            zone "awsneta.internal" {
                type forward;
                forward only;
                forwarders { 10.70.1.250; 10.70.2.250; };
            };
            EOF
            cat <<EOF > /var/named/idcneta.internal.zone
            \$TTL 300
            @       IN      SOA     ns1.idcneta.internal. admin.idcneta.internal. (
                                    2026031101 ; Serial
                                    3600       ; Refresh
                                    1800       ; Retry
                                    604800     ; Expire
                                    300 )      ; Minimum TTL
                    IN      NS      ns1.idcneta.internal.
            ns1     IN      A       10.80.1.200
            websrv  IN      A       10.80.1.100
            dnssrv  IN      A       10.80.1.200
            EOF
            systemctl enable --now named
          
  # EIP 생성
  # IDCEIP:
    # Type: AWS::EC2::EIP
    # Properties:
      # Domain: vpc

  # EIP를 EC2에 연결
  # EIPAssociation:
    # Type: AWS::EC2::EIPAssociation
    # DependsOn: IDCDNSSRV
    # Properties:
      # InstanceId: !Ref IDCDNSSRV
      # AllocationId: !GetAtt IDCEIP.AllocationId
      
  IDCSEBSRV:     #IDC Public EC2 인스턴스 1 생성
    Type: AWS::EC2::Instance
    DependsOn: IDCDNSSRV
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: IDC-WEBSRV
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref IDCVPCPublicSN
          GroupSet:
            - !Ref IDCSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
          PrivateIpAddress: 10.80.1.100    # 사설 IP
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            # DNS 서버 설정 추가
            echo "nameserver 10.80.1.200" > /etc/resolv.conf
            #echo "nameserver 169.254.169.253" >> /etc/resolv.conf     #AWS 기본 DNS (백업용) 근데 안할거임
            (
            echo "qwe123"
            echo "qwe123"
            ) | passwd --stdin root
            sed -i "s/^PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config     #SSH 비밀번호 로그인 허용
            sed -i "s/^#PermitRootLogin prohibit-password/PermitRootLogin yes/g" /etc/ssh/sshd_config     #root 계정 SSH 로그인 허용
            service sshd restart     #SSH 서비스 재시작
            hostnamectl --static set-hostname IDCWebSrv1     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성

  InboundEP:
    Type: AWS::Route53Resolver::ResolverEndpoint
    Properties:
      Direction: INBOUND
      IpAddresses:
        - Ip: 10.70.1.250
          SubnetId: !Ref AWSVPCPublicSN1
        - Ip: 10.70.2.250
          SubnetId: !Ref AWSVPCPublicSN2
      SecurityGroupIds:
        - !Ref AWSSecurityGroup
      Tags:
        - Key: Name
          Value: idc-to-aws-inbound
          
  OutboundEP:
    Type: AWS::Route53Resolver::ResolverEndpoint
    Properties:
      Direction: OUTBOUND
      IpAddresses:
        - Ip: 10.70.1.251
          SubnetId: !Ref AWSVPCPublicSN1
        - Ip: 10.70.2.251
          SubnetId: !Ref AWSVPCPublicSN2
      SecurityGroupIds:
        - !Ref AWSSecurityGroup
      Tags:
        - Key: Name
          Value: aws-to-idc-inbound
          
  ForwardRule:
    Type: AWS::Route53Resolver::ResolverRule
    Properties:
      DomainName: idcneta.internal
      Name: AWS-To-IDC-ForwardRule
      ResolverEndpointId: !Ref OutboundEP
      RuleType: FORWARD
      TargetIps:
        - Ip: 10.80.1.200
          Port: 53
      
  ResolverRuleAssociation:
    Type: AWS::Route53Resolver::ResolverRuleAssociation
    Properties:
      Name: Resolver-Rule-Association
      ResolverRuleId: !Ref ForwardRule
      VPCId: !Ref AWSVPC
    
Outputs:     #각 EC2 Public&Private IP 추출
  PublicEC2:
    Description: AWSSEBSRV1
    Value: !GetAtt AWSSEBSRV1.PublicIp
  PublicEC21:
    Description: AWSSEBSRV2
    Value: !GetAtt AWSSEBSRV2.PublicIp
  IDCDNS:
    Description: IDCDNSSRV
    Value: !GetAtt IDCDNSSRV.PublicIp
  IDCWEB:
    Description: IDCSEBSRV
    Value: !GetAtt IDCSEBSRV.PublicIp
